# TexasProof

./: .gitignore  MANIFEST.anchor  cli.py  gate_t24h.sh  gate_t2h.sh  gate_t48h.sh  ledger_schema.json  pyproject.toml  requirements.txt  spec.md  texas_fraud_spec.json
src/: __init__.py  core.py  dashboards.py  entropy.py  genesis.py  lottery_proof.py  ols_contractor_proof.py  pac_influence_proof.py  paxton_trust_proof.py  predatory_lending_proof.py  scenarios.py  sim.py  tsu_probe_proof.py  watcher.py
tests/: __init__.py  conftest.py  test_core.py  test_ols_contractor.py  test_pac_influence.py  test_predatory_lending.py  test_self_spawn.py  test_sim_scenarios.py
